Add greeting Use localStorage

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div class="js-clock">
       <h1 class="js-time"></h1>
     </div>
+    <div class="js-name"></div>
+
     <script src="clock.js"></script>
+    <script src="greeting.js"></script>
   </body>
 </html>
