--- a/index.html
+++ b/index.html
@@ -11,8 +11,19 @@
       <h1 class="js-time"></h1>
     </div>
     <div class="js-name"></div>
+    <div class="js-toDos">
+      <form class="js-toDosForm">
+        <input
+          type="text"
+          class="js-toDosInput"
+          placeholder="Write a To Do Here"
+        />
+      </form>
+      <ul class="js-toDosList"></ul>
+    </div>
 
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
