--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
       </form>
       <ul class="js-toDosList"></ul>
     </div>
+    <div class="js-weather">
+      <span class="js-temperature"></span>
+    </div>
 
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="todo.js"></script>
     <script src="bg.js"></script>
+    <script src="weather.js"></script>
   </body>
 </html>
